[package]
name = "apc_sales-wasm"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.apc_sales]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.5"

[workspace]
members = ["."]
